# django-image-compressor

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
django_image_compressor/: mixins.py  utils.py
django_image_compressor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
django_image_compressor/tests/: requirements.txt  runtests.py  test_settings.py  urls.py
django_image_compressor/tests/example_app/: admin.py  apps.py  forms.py  models.py  tests.py  views.py
django_image_compressor/tests/example_app/migrations/: 0001_initial.py
django_image_compressor/tests/test_app/: apps.py  models.py
